// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GuestNetwork/> Snapshot disabled. 1`] = `
<div>
  <h1>
    Guest Network
  </h1>
  <div
    id="guest-notification"
  />
  <p>
    The guest network is used for 
    <a
      href="/reforis/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    . It is separated from your ordinary LAN. Devices connected to this network are allowed to access the internet but are not allowed to access the configuration interface of this device or the devices in LAN.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Guest Network Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable Guest Network
        </label>
      </div>
      <div />
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled DHCP. 1`] = `
<div>
  <h1>
    Guest Network
  </h1>
  <div
    id="guest-notification"
  >
    <div
      class="alert alert-warning"
    >
      All network interfaces of this network are currently down.
    </div>
  </div>
  <p>
    The guest network is used for 
    <a
      href="/reforis/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    . It is separated from your ordinary LAN. Devices connected to this network are allowed to access the internet but are not allowed to access the configuration interface of this device or the devices in LAN.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Guest Network Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable Guest Network
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="2"
            required=""
            type="text"
            value="10.111.222.1"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Router's IP address in the guest inner network.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="4"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="4"
        >
          Enable DHCP
        </label>
        <div
          class="form-text"
        >
          <small>
            Enable this option to automatically assign IP addresses to the devices connected to the router.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          DHCP start
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="6"
            required=""
            type="text"
            value="10.111.222.100"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="7"
        >
          DHCP max leases
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="7"
            min="1"
            required=""
            type="number"
            value="150"
          />
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        <div
          class="form-text"
        >
          <small>
            Maximum number of addresses available for DHCP clients.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="8"
        >
          Lease time (hours)
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="8"
            min="1"
            required=""
            type="number"
            value="3600"
          />
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="5"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="5"
        >
          Enable QoS
        </label>
        <div
          class="form-text"
        >
          <small>
            This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
          </small>
        </div>
      </div>
      <div />
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  >
    <div
      class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
    >
      <h2>
        DHCP Client List
      </h2>
      <p>
        This list contains all devices that are connected to the network through wired or wireless connections.
      </p>
      <p
        class="text-muted text-center"
      >
        No clients found.
      </p>
    </div>
  </div>
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled QoS. 1`] = `
<div>
  <h1>
    Guest Network
  </h1>
  <div
    id="guest-notification"
  >
    <div
      class="alert alert-warning"
    >
      All network interfaces of this network are currently down.
    </div>
  </div>
  <p>
    The guest network is used for 
    <a
      href="/reforis/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    . It is separated from your ordinary LAN. Devices connected to this network are allowed to access the internet but are not allowed to access the configuration interface of this device or the devices in LAN.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Guest Network Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable Guest Network
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="2"
            required=""
            type="text"
            value="10.111.222.1"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Router's IP address in the guest inner network.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="4"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="4"
        >
          Enable DHCP
        </label>
        <div
          class="form-text"
        >
          <small>
            Enable this option to automatically assign IP addresses to the devices connected to the router.
          </small>
        </div>
      </div>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="5"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="5"
        >
          Enable QoS
        </label>
        <div
          class="form-text"
        >
          <small>
            This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Download
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="6"
            min="1"
            required=""
            type="number"
            value="1023"
          />
          <span
            class="input-group-text"
          >
            kb/s
          </span>
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        <div
          class="form-text"
        >
          <small>
            Download speed in guest network (in kilobits per second).
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="7"
        >
          Upload
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="7"
            min="1"
            required=""
            type="number"
            value="1025"
          />
          <span
            class="input-group-text"
          >
            kb/s
          </span>
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        <div
          class="form-text"
        >
          <small>
            Upload speed in guest network (in kilobits per second).
          </small>
        </div>
      </div>
      <div />
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled. 1`] = `
<div>
  <h1>
    Guest Network
  </h1>
  <div
    id="guest-notification"
  >
    <div
      class="alert alert-warning"
    >
      All network interfaces of this network are currently down.
    </div>
  </div>
  <p>
    The guest network is used for 
    <a
      href="/reforis/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    . It is separated from your ordinary LAN. Devices connected to this network are allowed to access the internet but are not allowed to access the configuration interface of this device or the devices in LAN.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Guest Network Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable Guest Network
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="2"
            required=""
            type="text"
            value="10.111.222.1"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Router's IP address in the guest inner network.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="4"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="4"
        >
          Enable DHCP
        </label>
        <div
          class="form-text"
        >
          <small>
            Enable this option to automatically assign IP addresses to the devices connected to the router.
          </small>
        </div>
      </div>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="5"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="5"
        >
          Enable QoS
        </label>
        <div
          class="form-text"
        >
          <small>
            This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
          </small>
        </div>
      </div>
      <div />
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`Displaying of interface warning messages Interface up & snapshot 1`] = `
<div
  id="guest-notification"
/>
`;

exports[`Displaying of interface warning messages No interface & snapshot 1`] = `
<div
  id="guest-notification"
>
  <div
    class="alert alert-warning"
  >
    This network currently doesn't contain any devices. The changes you make here will become fully functional after you assign a network interface to this network.
  </div>
</div>
`;

exports[`Displaying of interface warning messages No interface up & snapshot 1`] = `
<div
  id="guest-notification"
>
  <div
    class="alert alert-warning"
  >
    All network interfaces of this network are currently down.
  </div>
</div>
`;
